--- a/styles.scss
+++ b/styles.scss
@@ -12,3 +12,11 @@ body {
 section {
     margin-bottom: 3rem; /* Just adding some separation between our demos */
 }
+
+.list {
+    margin: 1rem;
+
+    .list__item--strikethrough {
+        text-decoration: line-through;
+    }
+}
